--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="presen2">
                 <img src="img/_magno_13_329969609_753317722860377_7374262537906219927_n.jpeg" alt="" srcset="">
             </div>
-        </div><br>
+        </div>
 
         <div class="me">
             <h2>Sobre mim</h2><br>
@@ -62,12 +62,11 @@
                 que crio tem um elemento fundamental a <b>paixão</b> pela tecnologia e um pouco de perfeccionismo. </p>
             <br>
             <p>Mas bom, abaixo você verá alguns cards, se estiver em um celular ou tablet basta clicar para ver mais
-                informações, mas se estiver em um laptop ou pc, basta passar o mouse por cima.</p>
+                informações, mas se estiver em um laptop ou pc, basta passar o mouse por cima.</p><br>
         </div>
 
-        <br>
         <div class="cartoes">
-            <h2>Serviços:</h2><br>
+            <h2>Serviços:</h2><br><br>
             <div class="card_int">
                 <div class="card_front">
                     <h2>Criação de artes digitais</h2>
@@ -80,7 +79,7 @@
                     <h2>Aqui tem o exemplo de uma logo criada do zero:</h2>
                     <img src="img/logo.png" alt="" srcset="">
                 </div>
-            </div>
+            </div><br><br>
         </div>
 
         <div class="projetos">
@@ -124,7 +123,7 @@
                     <p>Dicas para um bom proveito:</p>
                     <li>Para seguir para a próxima página é obrigatório preencher os dados solicitados;</li>
                 </ul>
-            </div>
+            </div><br><br>
         </div>
     </main>
 
