--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magno Dev</title>
+    <link rel="shortcut icon" href="img/mg_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,12 +17,12 @@
             <i class="menu" id="menu" onclick="clickMenu()">&#9776;</i>
             <div id="menu-container">
                 <div class="menu-nav">
-                    <a href=".presentation" id="hog" target="_blank">Sobre Mim</a>
+                    <a href="" id="hog" target="_blank">Sobre Mim</a>
                     <a href="https://www.instagram.com/_mg.tech_/" target="_blank">Instagram</a>
                     <a href="mailto:mgtech0304@gmail.com?subject=Serviço Web&amp;body=Olá Magno, vim pelo website do Harry Potter e gostaria de solicitar um projeto. (adicione aqui o seu projeto)"
                         target="_blank"><i class="far fa-envelope"></i>Email</a>
-                    <a href="" id="hog">Github</a>
-                    <a href="" target="_blank">Linkedin</a>
+                    <a href="https://github.com/MagnoDev21" id="hog">Github</a>
+                    <a href="https://www.linkedin.com/in/paulo-magno-a64970227/" target="_blank">Linkedin</a>
                 </div>
             </div>
         </div>
