--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magno Dev</title>
-    <link rel="shortcut icon" href="img/mg_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="mg_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
