--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="menu-container">
                 <div class="menu-nav">
                     <a href=".presentation" id="hog" target="_blank">Sobre Mim</a>
-                    <a href="https://api.whatsapp.com/send?phone=+5521995716949&text=Olá MG, vim pelo seu website, gostaria de fazer um orçamento." target="_blank">WhatsAppr</a>
+                    <a href="https://api.whatsapp.com/send?phone=+5521995716949&text=Olá MG, vim pelo seu website, gostaria de fazer um orçamento." target="_blank">WhatsApp</a>
                     <a href="https://www.instagram.com/_mg.tech_/" target="_blank">Instagram</a>
                     <a href="mailto:mgtech0304@gmail.com?subject=Serviço Web&amp;body=Olá Magno, vim pelo website do Harry Potter e gostaria de solicitar um projeto. (adicione aqui o seu projeto)"
                         target="_blank"><i class="far fa-envelope"></i>Email</a>
