--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
             <div class="card" id="calculadora">
                 <a href="calculadora/index.html" target="_blank"><img
-                        src="https://cdn.icon-icons.com/icons2/317/PNG/512/calculator-icon_34473.png"
+                        src="img/calculator-icon.png"
                         alt="calculadora"></a>
                 <h3>Calculadora</h3><br>
                 <p>Este é o meu projeto finalizado em /04/2023.</p>
