--- a/landingpage_HP/index.html
+++ b/landingpage_HP/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BQSK8E9BER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BQSK8E9BER');
+</script>
     <title>Hogwarts Page</title>
     <link rel="icon" href="icon/brasãohogwarts.png" type="image/png">
     <link rel="stylesheet"
