--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta name="keywords" content="Agencia Digital, CSS, HTML, SUPORTE WEB, JAVASCRIPT, Desenvolvimento Web, SEO, Logomarca,Logotipo">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/responsivo.css">
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-      
-        gtag('config', 'G-BQSK8E9BER');
-      </script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BQSK8E9BER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BQSK8E9BER');
+</script>
     <title>Magno Developer</title>
 </head>
 
